syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "gRPC.Unary.Server";

package Unary.Todo;

service TodoUnary {
  rpc GetTask (TodoRequest) returns (TodoResponse);
}

message TodoRequest {
  int32 taskId = 1;
}

message TodoResponse {
  int32 taskId = 1;
  string content = 2;
  google.protobuf.Timestamp EndDateTime = 3;
}
